# raytracer

./: .gitignore  README.md  defaultConfig.json  flake.nix  hie.yaml  raytracer.cabal  raytracer.hp.txt
app/: Camera.hs  Color.hs  Config.hs  Hittable.hs  HittableList.hs  ImageGenerator.hs  Main.hs  ObjParser.hs  ProgressBar.hs  Ray.hs  Sphere.hs  Vec3.hs
app/Core/: Ray.hs  Vec3.hs
app/Hittable/: BVH.hs  BoundingBox.hs  Class.hs  Helpers.hs  HittableList.hs  Wrapped.hs
app/Hittable/Objects/: Plane.hs  Sphere.hs  Triangle.hs
app/Parser/: Material.hs  Object.hs
app/Rendering/: Camera.hs  Color.hs  ImageGenerator.hs  Light.hs  Material.hs  RenderWorker.hs  SceneParser.hs  SkySphere.hs  Trace.hs
app/Utils/: Constants.hs  HitHelpers.hs  Interval.hs  ProgressBar.hs  RandomHelper.hs
configurations/: blenderDefault.json  colorsandmats.json  comp-v1.json  comp-v3.json  comp.json  complex_scene.json  grass.json  hdr-mat-test.json  internalDefault.json  monkey.json  objects-easy.json  objects.json  obli.json  testing.json  updated_objects.json
configurations/test-objects/: ball-in-grass-high-tria.mtl  ball-in-grass.mtl  ball-in-grass2.mtl  hdr-mat-testing.mtl  someobjects.mtl  someobjects11.mtl  someobjects12.mtl  someobjects2.mtl  someobjects4.mtl  someobjects9.mtl  wmaterial.mtl
docs/: 01_image.md  02_progress_bar.md  03_vec3.md  04_circle.md  05_ray.md  06_camera.md  07_sphere.md  08_normals_and_perspective.md  09_simplifications_and_profiling.md  10_hittable_abstraction.md  11_multiple_objects.md  12_fixing_perspective.md  13_front_vs_backfaces.md  14_anti_aliasing.md  15_diffuse_materials.md  16_buffered_writing.md  17_config_files.md  18_optimizations.md  19_monkey_render.md  20_bvh.md  2X_performance.md
docs/dev/: todos.md
out-examples/: 16x9.ppm
scenes/: ball-in-grass.blend  hdr-mat-testing.blend  someobjects.blend  someobjects.blend1
tools/: convert_all_out.sh
