cabal-version:      3.0
name:               raytracer

-- The package version.
-- PV summary:      +------- breaking API changes
--                  | +----- non-breaking API additions
--                  | | +--- code changes with no API change
version:            0.1.0
description:        A minimalistic raytracer written in Haskell.
homepage:           raytracer.omeldar.com

license:            GPL-3.0-or-later

license-file:       LICENSE

author:             Eldar Omerovic

maintainer:             

category:           Graphics
build-type:         Simple

common warnings
    ghc-options: -Wall

executable raytracer
    import:           warnings
    main-is:          Main.hs
    other-modules:
        ImageGenerator,
        ProgressBar,
        Vec3,
        Color,
        Ray,
        Camera,
        Sphere,
        Hittable
    build-depends:
        base ^>=4.17.2.1,
        time >=1.12 && <1.13,
        
        ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
