cabal-version:      3.0
name:               raytracer

-- The package version.
-- PV summary:      +------- breaking API changes
--                  | +----- non-breaking API additions
--                  | | +--- code changes with no API change
version:            0.1.0
description:        A minimalistic raytracer written in Haskell.
homepage:           raytracer.omeldar.com

license:            GPL-3.0-or-later

license-file:       LICENSE

author:             Eldar Omerovic

maintainer:             

category:           Graphics
build-type:         Simple

common warnings
    ghc-options: -Wall

executable raytracer
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Rendering.ImageGenerator,
        Utils.ProgressBar,
        Utils.Constants,
        Utils.Interval,
        Core.Vec3,
        Rendering.Color,
        Core.Ray,
        Rendering.Camera,
        Hittable.Objects.Sphere,
        Hittable.Class,
        Hittable.HittableList
    build-depends:
        base ^>=4.17 && <4.19,
        time >=1.12 && <1.13,
        ansi-terminal,
        random
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2  

-- executable with profiling enabled
executable profraytracer
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Rendering.ImageGenerator,
        Utils.ProgressBar,
        Utils.Constants,
        Utils.Interval,
        Core.Vec3,
        Rendering.Color,
        Core.Ray,
        Rendering.Camera,
        Hittable.Objects.Sphere,
        Hittable.Class,
        Hittable.HittableList
    build-depends:
        base ^>=4.17.2.1,
        time >=1.12 && <1.13,
        ansi-terminal,
        random
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -prof -fprof-auto -rtsopts -fprof-cafs