cabal-version:      3.0
name:               raytracer

-- The package version.
-- PV summary:      +------- breaking API changes
--                  | +----- non-breaking API additions
--                  | | +--- code changes with no API change
version:            0.1.0
description:        A raytracer written in Haskell.
homepage:           raytracer.omeldar.com

license:            GPL-3.0-or-later

license-file:       LICENSE

author:             Eldar Omerovic

maintainer:             

category:           Graphics
build-type:         Simple

common warnings
    ghc-options: -Wall

executable raytracer
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Utils.ProgressBar,
        Utils.Constants,
        Utils.Interval,
        Utils.HitHelpers,
        Core.Ray,
        Core.Vec3,
        Rendering.Camera,
        Rendering.Color,
        Rendering.ImageGenerator,
        Rendering.Light,
        Rendering.Material,
        Hittable.Class,
        Hittable.BoundingBox,
        Hittable.Helpers,
        Hittable.Wrapped,
        Hittable.HittableList,
        Hittable.Objects.Sphere,
        Hittable.Objects.Plane,
        Hittable.Objects.Triangle,
        Hittable.BVH,
        Config,
        Parser.Object,
        Parser.Material
    build-depends:
        base >=4.17 && <4.20,
        time >=1.12 && <1.13,
        ansi-terminal,
        random,
        aeson,
        bytestring,
        directory,
        containers >= 0.6,
        filepath >= 1.4,
        async >= 2.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N 

-- executable with profiling enabled
executable profraytracer
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Utils.ProgressBar,
        Utils.Constants,
        Utils.Interval,
        Utils.HitHelpers,
        Core.Ray,
        Core.Vec3,
        Rendering.Camera,
        Rendering.Color,
        Rendering.ImageGenerator,
        Rendering.Light,
        Rendering.Material,
        Hittable.Class,
        Hittable.BoundingBox,
        Hittable.Helpers,
        Hittable.Wrapped,
        Hittable.HittableList,
        Hittable.Objects.Sphere,
        Hittable.Objects.Plane,
        Hittable.Objects.Triangle,
        Hittable.BVH,
        Config,
        Parser.Object,
        Parser.Material
    build-depends:
        base >=4.17 && <4.20,
        time >=1.12 && <1.13,
        ansi-terminal,
        random,
        aeson,
        bytestring,
        directory,
        containers >= 0.6,
        filepath >= 1.4,
        async >= 2.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2 -prof -fprof-auto -fprof-cafs -rtsopts